[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Like `Iterator::take_while`, but calls the predicate on a peeked value. This allows you to use `Iterator::by_ref` and `Iterator::take_while` together, and still get the first value for which the `take_while` predicate returned false after dropping the `by_ref`."
categories = ["no-std", "rust-patterns"]
edition = "2018"
keywords = ["iterator", "take_while", "peek", "by_ref"]
license = "MIT OR Apache-2.0"
name = "peeking_take_while"
readme = "./README.md"
repository = "https://github.com/fitzgen/peeking_take_while"
version = "1.0.0"

[badges]
[badges.travis-ci]
repository = "fitzgen/peeking_take_while"
